fix import and add test